syntax = "proto3";

package o5.aws.deployer.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "o5/aws/deployer/v1/pgmigrate.proto";
import "o5/aws/deployer/v1/steps.proto";
import "psm/list/v1/annotations.proto";
import "psm/state/v1/annotations.proto";
import "psm/state/v1/metadata.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_pb";

message DeploymentKeys {
  option (psm.state.v1.psm).name = "deployment";

  string deployment_id = 1 [
    (buf.validate.field).string.uuid = true,
    (psm.state.v1.field).primary_key = true
  ];

  string stack_id = 2 [(buf.validate.field).string.uuid = true];
  string environment_id = 3 [(buf.validate.field).string.uuid = true];
  string cluster_id = 4 [(buf.validate.field).string.uuid = true];
}

message DeploymentState {
  psm.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  DeploymentKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  DeploymentStatus status = 3 [(psm.list.v1.field).enum.filtering = {filterable: true}];

  DeploymentStateData data = 4;
}

message DeploymentStateData {
  DeploymentSpec spec = 4;

  repeated DeploymentStep steps = 10;
}

message DeploymentSpec {
  string app_name = 1 [(psm.list.v1.field).string.foreign_key.unique_string.filtering.filterable = true];

  string version = 2 [(psm.list.v1.field).string.foreign_key.unique_string.filtering.filterable = true];

  string environment_name = 3 [(psm.list.v1.field).string.foreign_key.unique_string.filtering.filterable = true];

  string environment_id = 4 [
    (buf.validate.field).string.uuid = true,
    (psm.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  S3Template template = 5;

  string ecs_cluster = 6 [(psm.list.v1.field).string.foreign_key.unique_string.filtering.filterable = true];

  string cf_stack_name = 7 [(psm.list.v1.field).string.foreign_key.unique_string.filtering.filterable = true];

  DeploymentFlags flags = 8;

  repeated PostgresSpec databases = 9;
  repeated CloudFormationStackParameter parameters = 10;
  repeated string sns_topics = 11;
}

message DeploymentFlags {
  // Skips scale up/down, directly applying the updates in one infra call.
  bool quick_mode = 1;

  // Rotates database credentials
  bool rotate_credentials = 2;

  bool cancel_updates = 3;
  bool db_only = 4;
  bool infra_only = 5;

  bool import_resources = 6;
}

enum DeploymentStatus {
  DEPLOYMENT_STATUS_UNSPECIFIED = 0;
  DEPLOYMENT_STATUS_QUEUED = 1;
  DEPLOYMENT_STATUS_TRIGGERED = 2;
  DEPLOYMENT_STATUS_WAITING = 3;
  DEPLOYMENT_STATUS_AVAILABLE = 4;
  DEPLOYMENT_STATUS_RUNNING = 5;

  DEPLOYMENT_STATUS_DONE = 100;
  DEPLOYMENT_STATUS_FAILED = 101;
  DEPLOYMENT_STATUS_TERMINATED = 102;
}

message DeploymentEvent {
  psm.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];

  DeploymentKeys keys = 2 [(buf.validate.field).required = true];

  DeploymentEventType event = 3 [(buf.validate.field).required = true];
}

message DeploymentEventType {
  oneof type {
    option (psm.list.v1.oneof).filtering.filterable = true;

    Created created = 1;
    Triggered triggered = 2;

    StackWait stack_wait = 4;
    StackWaitFailure stack_wait_failure = 5;
    StackAvailable stack_available = 6;

    RunSteps run_steps = 7;
    StepResult step_result = 10;
    RunStep run_step = 11;

    Error error = 99;
    Done done = 100;
    Terminated terminated = 101;
  }

  message Created {
    DeploymentSpec spec = 1;
  }

  message Triggered {}

  message StackCreate {}

  // Waits for the stack to be ready, without making any changes
  message StackWait {}

  message StackWaitFailure {
    string error = 1;
  }

  message StackAvailable {
    // nil when no stack exists
    CFStackOutput stack_output = 1;
  }

  message RunSteps {
    repeated DeploymentStep steps = 10;
  }

  message StepResult {
    string step_id = 1;
    StepStatus status = 2;
    StepOutputType output = 3;
    optional string error = 4;
  }

  message RunStep {
    string step_id = 1;
  }

  message Error {
    string error = 1;
  }

  message Done {}

  message Terminated {}
}
